--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "0.1.18",
     "axios": "0.21.4",
+    "better-sqlite3": "7.5.3",
     "connected-react-router": "6.9.2",
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
@@ -58,9 +59,8 @@
     "redux-devtools-extension": "2.13.8",
     "reflect-metadata": "0.1.10",
     "remark-gfm": "2.0.0",
-    "sqlite3": "5.0.8",
     "tail": "2.0.3",
-    "typeorm": "0.2.37",
+    "typeorm": "0.3.7",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
@@ -92,7 +92,6 @@
     "@types/ws": "6.0.3",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
-    "better-sqlite3": "^7.5.3",
     "chokidar": "^3.5.3",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
