--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "0.1.18",
+    "@types/react-virtualized": "^9.21.21",
     "axios": "0.21.4",
     "better-sqlite3": "7.5.3",
     "connected-react-router": "6.9.2",
@@ -51,11 +52,11 @@
     "react": "17.0.2",
     "react-color": "2.18.0",
     "react-dom": "17.0.2",
+    "react-keybind": "0.9.4",
     "react-markdown": "7.0.1",
     "react-redux": "7.2.8",
-    "react-keybind": "0.9.4",
     "react-router-dom": "5.1.2",
-    "react-virtualized": "9.22.3",
+    "react-virtualized-reactv17": "9.23.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "reflect-metadata": "0.1.10",
@@ -73,7 +74,6 @@
     "@swc/cli": "0.1.57",
     "@swc/core": "1.2.205",
     "@types/better-sqlite3": "7.5.0",
-    "@types/electron-devtools-installer": "2.2.0",
     "@types/follow-redirects": "1.8.0",
     "@types/fs-extra": "8.1.0",
     "@types/jest": "27.5.1",
@@ -85,7 +85,6 @@
     "@types/react-dom": "17.0.2",
     "@types/react-redux": "7.1.7",
     "@types/react-router-dom": "5.1.7",
-    "@types/react-virtualized": "9.21.11",
     "@types/tail": "2.0.0",
     "@types/uuid": "3.4.5",
     "@types/uuid-validate": "0.0.1",
@@ -98,7 +97,6 @@
     "cross-env": "7.0.2",
     "electron": "17.2.0",
     "electron-builder": "22.14.13",
-    "electron-devtools-installer": "3.1.1",
     "eslint": "7.2.0",
     "eslint-plugin-only-warn": "1.0.2",
     "eslint-plugin-react": "7.20.0",
