--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "typedoc": "0.22.15",
     "typescript": "4.6.2",
     "webpack": "5.72.1",
-    "webpack-cli": "4.9.2"
+    "webpack-cli": "4.9.2",
+    "cargo-cp-artifact": "^0.1"
   },
   "optionalDependencies": {
     "fsevents": "2.1.3"
