--- a/crates/fp-rust/Cargo.toml
+++ b/crates/fp-rust/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1", features = ["rt-multi-thread"] }
 once_cell = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+fs_extra = "1"
 
 [dependencies.neon]
 version = "0.10"
